Update CorsGlobalFilter.java